--- a/_posts/2021-11-27-gift.md
+++ b/_posts/2021-11-27-gift.md
@@ -2,7 +2,7 @@
 layout: post
 title: Gift
 description: Gifts always gravitate towards where they are needed most. 
-summary: Gifts always gravitate towards where they are needed most. 
+image: 
 tags: [letters]
 ---
 
