--- a/_posts/2021-10-12-empty.md
+++ b/_posts/2021-10-12-empty.md
@@ -22,7 +22,7 @@ I choose to set myself free.
 
 Free from triggers, free from scripts, and most importantly, free from Fear.
 
-Freedom from fear is teh hardest freedom to cultivate, yet, just like any kind of freedom, it's just a mindset, and right here, right now, in this very moment, I am letting go of Fear and overwritting defeault behaviours with empty space.
+Freedom from fear is the hardest freedom to cultivate, yet, just like any kind of freedom, it's just a mindset, and right here, right now, in this very moment, I am letting go of Fear and overwritting defeault behaviours with empty space.
 
 Empty space is sacred.
 
