--- a/_posts/2021-11-27-gift.md
+++ b/_posts/2021-11-27-gift.md
@@ -9,9 +9,25 @@ tags: [letters]
 27 November 2021 🌗
 ## Dear Santa,
 
-I am in a privilledged position of my monthly expenses being more or less covered by my online business, at least for now. After four years of entrepreneurial learning curve I finally managed to pay myself €600 for a few months in a row, which feels encouraging. It wasn't always like that.
+I am in a privilledged position of my basic monthly expenses being more or less covered by my online business, at least for now. 
 
-In the same time, it doesn't really leave much space for investing in what my heart calls me to invest in: regenerating the land and taking part in experiences helping me to grow in that direction.
+It wasn't easy to get here.
+
+It took four years of being constantly challenged by the entrepreneurial learning curve. One of the biggest difficultues revolves around money. In a nutshell: **I feel very little alignment with the current capitalist system and I'd like to embody a different paradigm.**
+
+But that isn't easy when I depend on my own business to bring income. On one hand I am fully commited to release products that genuinely enrich lives and contribue to co-creating a beautiful planet where all beings can thrive. On the other, I feel pressure to make enough to pay the basic expenses.With the entrepreneurial world saturated with content prioritizing making more money rather than *why* and *how aligned*, it's been hard to stay grounded and maintain a relatively steady course aligned with what my heart believes in.
+
+But it's been kinda working lately, and I feel that my work is tuning in more and more with my values, while brining in enough financially to sustain my basic needs, and leaving some time and energy to *give freely* to work that matters that I don't want to charge for.
+
+Because, I deeply believe that **not everything should be monetized**.
+
+Regenerating the land.
+
+Healing oneself and others.
+
+Sharing the Light to inspire and encourage more people to enter into the upwards spiral of the beautiful world that our hearts know is possible [^1].
+
+These are my priorities, and while I'm commited to this path anyway, I could certainly use your help. 
 
 That's why I'm writing this letter to ask you for a Gift.
 
@@ -33,13 +49,23 @@ With Love and Gratitude,<br>
 Michał.
 
 ps. The List:
-- **Permaculture Design Course**, residential in Portugal (ideally Azores) or online
-- <a href="https://kernel.community/en/" target="_blank"> Kernel Online Course</a>
-- Contact Improvisation / Exctatic Dance residential gathering in Portugal
-- **A sailboat**, to cross from Europe to Brazil in Nov/Dec 2022, as well as host experiences at sea, and finally ditch flying
-- A functioning typewriter, to write letters
-- A good quality, compact, and sturdy mechanical keyboard with bluetooth, to write digital letters
-- A hardcover book about astrology with strong focus on charts and visuals. I want to study different types of maps and astrology is a map.
-- A hardcover edition of *Tao Te Ching*
-- Solar panels
 
+## Education
+- **Permaculture Design Course**, residential in Portugal (or even better, in Azores) or online, because I believe that permaculture is one of the most important fields to study right now, and I have pretty much zero experience with it.
+- <a href="https://kernel.community/en/" target="_blank"> Kernel Online Course</a>, because web3 and blockchain opens amazing possibilities for regenerating the world at scale, and I'd love to start my journey in this area by building something beautiful with other amazing people.
+- <a href="https://www.greaterthan.works/academy/thriving-networks" target="_blank">Thriving Networks online course</a>, because I'm building a <a href="pico.microsolidarity.cc" target="_blank">Regenerative Network in the Azores</a> and I could really use some extra support with the upcoming challenges. Knowing the humans behind this course, I feel that it's precisely the right place for me to be.
+
+## Personal Growth
+- Contact Improvisation / Exctatic Dance residential gathering/course in Portugal, because connecting with other humans through dance is one of the most effective ways of addressing one of the biggest fears I'm working though at the moment, and it's part of the healing that is very important for me to experience.
+- Sailing opportunities of any shapes and sizes, ideally to/from/within the Azores, because sailing is the core foundation of my soul and I want to bring this gift to the world by hosting regenerative retreats at sea.
+
+## Items
+- **A sailboat**. Yes, it's a bold ask, but you never know. A sailboat would allow me to ditch flying for good, and move between the islands in the Azores (and beyond) to catalyse the regenerative network, as well as host transformative experiences at sea. I'm also feeling called to Brazil (and I intend to answer that Call). I'm looking to sail there from Europe in Nov/Dec 2022.
+- A functioning typewriter, to write [letters](/letters)
+- A compact mechanical keyboard with bluetooth, EN or PT layout, to write digital letters
+- A hardcover book about astrology in English with strong focus on charts and visuals. I want to study different types of maps and astrology is a map.
+- A hardcover edition of *Tao Te Ching*
+- Solar panels to power my tiny cabin and the community space next to it
+
+
+[^1 I borrow this term from the wonderful book by Charles Eisenstein <a href="https://charleseisenstein.org/books/sacred-economics/" target="_blank">"Sacred Economics: Money, Gift & Society in the Age of Transition"</a>]
