--- a/_posts/2021-11-27-gift.md
+++ b/_posts/2021-11-27-gift.md
@@ -64,6 +64,7 @@ ps. The List:
 - A hardcover book about astrology in English with strong focus on charts and visuals. I want to study different types of maps and astrology is a map.
 - A hardcover edition of *Tao Te Ching*
 - Solar panels to power my tiny cabin and the community space next to it
+- [Travel Berkey Water Filter](https://berkey-waterfilters.fr/products/systeme-de-filtration-deau-travel-berkey-version-reduite-du-big-berkey){:target="_blank"}, because drinking highest quality water is essential
 
 <p></p>
 
