--- a/_posts/2021-11-27-21-questions.md
+++ b/_posts/2021-11-27-21-questions.md
@@ -14,4 +14,6 @@ I'll pick 21 and publish them here with answers.
 
 **Disclaimer**: Learning from the story of the Royal Research Ship *Boaty McBoatface*, I reserve the right to not answer/publish your question.
 
+![RSS Boaty McBoatface](/assets/boaty-mcboatface.jpg)
+
 
