updated yearly review

--- a/_posts/2022-01-02-yearly-review-2021.md
+++ b/_posts/2022-01-02-yearly-review-2021.md
@@ -14,7 +14,7 @@ Here's the drawing of my year:
 
 ![Poster with year 2021](/assets/year-2021.jpg)
 
-I tell you a bit more about it, using a few scans from the pages of my 2021 journals, captured during my yearly review.
+I'll share with you a bit more about it, using a few scans from the pages of my 2021 journals, captured during my yearly review.
 
 Enjoy 💜
 
@@ -55,11 +55,15 @@ In the summer I felt a call to ditch the comforts of a house and moved into a fo
 
 ![Happy Michal in the forest](/assets/forest-michal.jpeg)
 
-*Photo by [Austeja Liu](https://austejaliu.com){:target="_blank"}*
+*Photo by [Austėja Liupševičiūtė](https://austejaliu.com){:target="_blank"}*
 
 Being in the forest started a deep process of reconnection with myself, tuning into my intuition, which allowed me to rediscover what is important to me and how I want to manifest it. I am forever grateful to Jean-Daniel who allowed me to live on his land, as well as Austeja and Niko, who were my forest neighbours.
 
-I started to write poetry and letters again, I felt free like I haven't in a couple of years, and I have learnt a few critical lessons, which I then integrated on a trip to the Mainland Portugal in September, which blew my mind beyond anything I knew before.
+![My forest house](/assets/forest-camp.jpg)
+
+*My home in the Magical Forest*
+
+I started to [write poetry](https://write.as/fromtheforest/){:target="_blank"}* and [letters](/letters){:target="_blank"} again, I felt free like I haven't in a couple of years, and I have learnt a few critical lessons, which I then integrated on a trip to the Mainland Portugal in September, which blew my mind beyond anything I knew before.
 
 ![The more present I am, the more time I have. I am Being.](/assets/present-being.jpeg)
 
@@ -67,9 +71,9 @@ I started to write poetry and letters again, I felt free like I haven't in a cou
 
 The seed of walking has been planted during my little camino in Faial island. I felt called to go there and connect with the island, and instead of cycling or driving I wanted to walk. So I walked for three days pretty much non-stop, covering the entire island, climbing up and down volcanoes, and sleeping in a hammock in the forest.
 
-In September, I spent three weeks walking in Lisbon and Porto, for most of my waking hours. Soon after walking up I'd leave the house and began walking, walking, walking and come back late at night to sleep and then walk again the following day. 
+In September, I spent three weeks walking in Lisbon and Porto, for most of my waking hours. Soon after walking up I'd leave the house and began walking, walking, walking only to come back late at night to sleep and then walk again the following day. 
 
-**I have never reached the level of self-awareness before that trip. I've experienced unprecedented abundance, flow of synchronicities, moments of beauty, unexpected beautiful connections with people and other beings, and powerful insights.** 
+**I have never reached such a deep level of self-awareness until that trip. I've experienced unprecedented abundance, flow of synchronicities, moments of beauty, unexpected beautiful connections with people and other beings, and powerful insights.** It changed me.
 
 I don't really have words to describe it just yet.
 
@@ -96,6 +100,10 @@ This year was special in that regard.
 I still remember the crazy brainstorming session when the game idea came to me:
 
 ![Early prototype of the game](/assets/community-council-early-prototype.jpeg)
+
+My wonderful island family gave life to the prototype and created a map full of exciting projects.
+
+![Pico Projects Map](/assets/pico-projects-map.jpg)
 
 **I've also created a [performance](/ouroboros){:target="_blank"} with Austeja**, which moved local people and kids in ways that we haven't expected. We also co-created a more events in Pico, such as *[Slam Jam](https://cryptpad.fr/pad/#/2/pad/view/S8q92EhUcHMkTx3IASAbzDYd6w2GDEU+mOJuKsXsxrg/){:target="_blank"}*, *Masking Around*, and more. We also had our bi-weekly [sharing circle](https://pico.microsolidarity.cc/projects/sharing-circle){:target="_blank"} and a [drum crew](https://pico.microsolidarity.cc/projects/drum-crew){:target="_blank"}. Loads and Loads of spaces and even more magical moments that emerged from there.
 
@@ -189,13 +197,11 @@ In fact, I find Charles to be one of the most important writers of today's world
 
 ## The Alternative Culture is here. All we need to do is shine ✨
 
-Most of all, the 2021 shown me that the (for a lack of better word) global capitalist culture is not only complete bullshit (this I knew for a long time), but the alternative is already here and so many people already made the shift. It's possible. It's happening. No more excuses and keeping the hamster wheel going.
+Most of all, the 2021 shown me that the (for a lack of better word) global capitalist culture is not only complete bullshit (this I knew for a long time), but **the alternative is already here and so many people already made the shift. It's possible. It's happening.** No more excuses and keeping the hamster wheel going.
 
-It's been such a privilege to learn from and with all the wonderful souls I've met this year. Here are a few of them:
+It's been such a privilege to learn from and with all the wonderful souls I've met this year. Here are a few of them along with ideas they shared with me:
 
 ![A few people I met](/assets/new-culture.jpeg)
-
-And there were oh so many.
 
 It's not that the change is coming.
 
@@ -205,15 +211,15 @@ All we need to do is shine ✨.
 
 And, of course, NO FEAR.
 
-Fear is heart killer.
+**Fear is the heart killer.**
 
 ## Gratitude Mandala
 
-Speaking of the people I've been lucky to meet...
+Speaking of the people I've been lucky to connect with...
 
 Every year I draw a [Gratitude Mandala](https://journalsmarter.com/gratitude-mandala){:target="_blank"}, which includes beings I’m grateful for in the year that has ended. It’s a part of my yearly review since 2019.
 
-Here's the mandala for 2021:
+Here's my mandala for 2021:
 
 ![Gratitude Mandala 2021](/assets/gratitude-mandala-2021.jpg)
 
@@ -235,13 +241,13 @@ I still feel like doing a bit more internal soul-searching in that field, but th
 
 **My #1 priority in 2022 is to create and document regenerative communities.**
 
-It seems like it's a perfect *Ikigai* – a direction encompassing something the world needs, something I'm good at, something I love doing and something I can get paid for. I wrote a [sweet article](https://betterhumans.pub/how-to-chart-a-new-course-for-your-life-with-3-simple-diagrams-e9cc6b59c49d?sk=9afa2b3f5abcec0c48774bf022b1ef77){:target="_blank"} about it a long time ago, and I actually feel like revisiting the exercises I shared there.
+It seems like it's a perfect *Ikigai* – a direction encompassing something the world needs, something I'm good at, something I love doing and something I can get paid for. I wrote a [sweet article](https://betterhumans.pub/how-to-chart-a-new-course-for-your-life-with-3-simple-diagrams-e9cc6b59c49d?sk=9afa2b3f5abcec0c48774bf022b1ef77){:target="_blank"} about Ikigai a long time ago, and I actually feel like revisiting the exercises I shared there.
 
 But for now, here's a hypothesis:
 
-**If I make more space for my community catalysing activities and keep documenting what I do and how I do it (whether in [Pico](https://pico.microsolidarity.cc/){:target="_blank"}, the Azores, or digital) my work will create a serious ripple effect inspiring and encouraging people to create their own communities and regenerative projects. And part of that ripple effect will come back to me in the form of gratitude and financial support allowing me to do more meaningful work in that area.**
+**If I make more space for my community catalysing activities and keep documenting what I do and how I do it (whether in [Pico](https://pico.microsolidarity.cc/){:target="_blank"}, the Azores, [Enspiral](https://enspiral.com){:target="_blank"} or in digital spaces) my work will create a serious ripple effect inspiring and encouraging people to create their own communities and regenerative projects. And part of that ripple effect will come back to me in the form of gratitude and financial support allowing me to do more meaningful work in that area.**
 
-In other words, instead of pushing to sell products, I'd rather be supported by people who believe that what I do is important, and who want to help me make it happen. So, I've set up a [Patreon account](https://patreon.com/michalkorzonek){:target="_blank"} and I'm excited to see what happens. It'd mean the world to me if you would consider being a part of that journey.
+In other words, instead of pushing to sell products, I'd rather be supported by people who believe that what I do is important, and who want to help me make it happen. So, I've set up a [Patreon account](https://patreon.com/michalkorzonek){:target="_blank"} and I'm curious to see if it's a viable path for me right now. It'd mean the world to me if you would consider being a part of that journey.
 
 You can see what I'm focusing on [here](/focus){:target="_blank"}.
 
@@ -252,6 +258,8 @@ I wish you Freedom, Joy and Fulfilment. Let's co-create a beautiful world where 
 Thank you for Being,<br>
 Michał
 
-ps. Since this is a New Moon, I'm due my Moonly video. Here it is ([youtube link](https://youtu.be/DXJtwKv51ek){:target="_blank"}, since I still haven't made my mind as to where to upload videos... TBC).
+ps. Since this is a New Moon, I'd like to share my Moonly video (a practice I reconnected with this summer and kept it going without skipping a beat until now). Here it is ([youtube link](https://youtu.be/DXJtwKv51ek){:target="_blank"}, since I still haven't made my mind as to where to upload videos instead of google... TBC). If you want to see more, here's the [entire collection](/one-second-a-day).{:target="_blank"}. And speaking of that - it's such a wonderful way of going back through my year. I'm so grateful for this practice!
+
+pps. As I went through all the one-second-a-day videos from this year I've noticed one HUGE thing missing from my yearly review - sailing with *Maria Armanda*, a traditional whaling boat. I'm so grateful to Amanda who brought Marcos into my life, who connected me with Felipe, who took me as a crew. I need sailing in my life. It's essential ⛵️.
 
 
