--- a/_posts/2021-12-30-to-kiks.md
+++ b/_posts/2021-12-30-to-kiks.md
@@ -29,7 +29,7 @@ For now though, I'd just like to tell you one more time that I'm super grateful 
 
 I wish you all that is most beautiful for you in the coming year, although I have limited understanding of what it might be.
 
-Thank you for Being,
+Thank you for Being,<br>
 Michał
 
 ps. I'm also grateful for the name I channeled for you. It really does suit you, you little cheeksto.
