--- a/_posts/2022-01-02-yearly-review-2021.md
+++ b/_posts/2022-01-02-yearly-review-2021.md
@@ -258,7 +258,7 @@ I wish you Freedom, Joy and Fulfilment. Let's co-create a beautiful world where 
 Thank you for Being,<br>
 Michał
 
-ps. Since this is a New Moon, I'd like to share my Moonly video (a practice I reconnected with this summer and kept it going without skipping a beat until now). Here it is ([youtube link](https://youtu.be/DXJtwKv51ek){:target="_blank"}, since I still haven't made my mind as to where to upload videos instead of google... TBC). If you want to see more, here's the [entire collection](/one-second-a-day).{:target="_blank"}. And speaking of that - it's such a wonderful way of going back through my year. I'm so grateful for this practice!
+ps. Since this is a New Moon, I'd like to share my Moonly video (a practice I reconnected with this summer and kept it going without skipping a beat until now). Here it is ([youtube link](https://youtu.be/DXJtwKv51ek){:target="_blank"}, since I still haven't made my mind as to where to upload videos instead of google... TBC). If you want to see more, here's the [entire collection](/one-second-a-day){:target="_blank"}. And speaking of that - it's such a wonderful way of going back through my year. I'm so grateful for this practice!
 
 pps. As I went through all the one-second-a-day videos from this year I've noticed one HUGE thing missing from my yearly review - sailing with *Maria Armanda*, a traditional whaling boat. I'm so grateful to Amanda who brought Marcos into my life, who connected me with Felipe, who took me as a crew. I need sailing in my life. It's essential ⛵️.
 
