--- a/_posts/2012-11-30-20+4-11.DR1651F1.md
+++ b/_posts/2012-11-30-20+4-11.DR1651F1.md
@@ -1,9 +1,17 @@
 ---
 layout: post
 title: 20+4 slash 11.DR1651F1 (Party & Installation)
-description: 
+description: Transforming a party into an interactive playground
 image:
 tags: [experiences]
 ---
 
-- [ ] add documentation
+Context: *20+4/11.DR1651F1* was the second interactive party hosted at Casa del Cine in Edinburgh.
+
+Magic: Transforming a casual party into an interactive playground by introducing gamification and interactive installations.
+
+My Role: Concept, space design, gamification, sound installation in the bathroom,  video projection,
+
+[Video](https://vimeo.com/138565331){:target="_blank"}
+
+- [ ] add photos
