upload moments of connection

--- a/_posts/2017-05-17-timeless.md
+++ b/_posts/2017-05-17-timeless.md
@@ -8,6 +8,6 @@ tags: [stories]
 
 Context: 
 
-*Timeless* is the very first of "Moments of Connection" - a series of poetic stories inspired by these magical moments and conversations that touched me deeply.
+*Timeless* is the very first of "[Moments of Connection](/moments-of-connection)" - a series of poetic stories inspired by these magical moments and conversations that touched me deeply.
 
 [Read *Timeless* on Medium](https://medium.com/honeyboom-xyz/timeless-939949944214){:target="_blank"}
