--- a/_posts/2018-05-05-am-yoga.md
+++ b/_posts/2018-05-05-am-yoga.md
@@ -3,7 +3,7 @@ layout: post
 title: 01:31 AM Yoga
 description: Rebooting my brain at the airport before a 6 hour flight.
 image:
-tags: [article]
+tags: [articles]
 ---
 
 Context: 
