--- a/_posts/2021-11-27-gift.md
+++ b/_posts/2021-11-27-gift.md
@@ -54,8 +54,8 @@ ps. The List:
 - <a href="https://www.greaterthan.works/academy/thriving-networks" target="_blank">Thriving Networks online course</a>, because I'm building a <a href="https://pico.microsolidarity.cc" target="_blank">Regenerative Network in the Azores</a> and I could really use some extra support with the upcoming challenges. Knowing the humans behind this course, I feel that it's precisely the right place for me to be.
 
 ## Personal Growth
-- Contact Improvisation / Ecstatic Dance residential gathering/course in Portugal, because connecting with other humans through dance is one of the most effective ways of addressing one of the biggest fears I'm working though at the moment, and it's part of the healing that is very important for me to experience.
-- Sailing opportunities of any shapes and sizes, ideally to/from/within the Azores, because sailing is the core foundation of my soul and I want to bring this gift to the world by hosting regenerative retreats at sea.
+- **Contact Improvisation residential gathering/course in Portugal**, because connecting with other humans through dance is one of the most effective ways of addressing one of the biggest fears I'm working though at the moment, and it's part of the healing that is very important for me to experience.
+- **Sailing opportunities of any shapes and sizes**, ideally to/from/within the Azores, because sailing is the core foundation of my soul and I want to bring this gift to the world by hosting regenerative retreats at sea.
 
 ## Items
 - **A sailboat**. Yes, it's a bold ask, but you never know. A sailboat would allow me to ditch flying for good, and move between the islands in the Azores (and beyond) to catalyse the regenerative network, as well as host transformative experiences at sea.
@@ -67,7 +67,7 @@ ps. The List:
 - [Travel Berkey Water Filter](https://berkey-waterfilters.fr/products/systeme-de-filtration-deau-travel-berkey-version-reduite-du-big-berkey){:target="_blank"}, because drinking highest quality water is essential
 
 ## Other
-- TDF Carrots 🥕🥕🥕
+- TDF Carrot Tokens 🥕🥕🥕
 
 <p></p>
 
