--- a/_posts/2022-05-17-cabin.md
+++ b/_posts/2022-05-17-cabin.md
@@ -8,7 +8,7 @@ tags: documentation
 
 (I couldn't help myself... I had to begin with quoting *[The Cabin](https://www.youtube.com/watch?v=ua1FAlHt_Ys){:target="_blank"}* by Ylvis).
 
-> *Let me take you to my favourite place, just a five hours drive from a city.*> 
+> *Let me take you to my favourite place, just a five hours drive from a city.*
 
 ![Pico Road](/assets/pico-road.jpeg)
 
