--- a/_posts/2022-05-17-cabin.md
+++ b/_posts/2022-05-17-cabin.md
@@ -107,7 +107,7 @@ The altar with Kiki:
 Roof support structure:
 ![Cabin Roof](/assets/cabin-roof-inside.jpeg)
 
-Desk I built
+Desk I built:
 ![Cabin Desk](/assets/cabin-desk-build.jpeg)
 
 My true form:
