cabin and review

--- a/_posts/2022-05-17-cabin.md
+++ b/_posts/2022-05-17-cabin.md
@@ -73,7 +73,8 @@ A few improvements I'd consider doing with the cabin design:
 ## Deep Work Retreat
 I'm on a quest to raise funds for a community land in Pico, with a forest, a community space and a few cabins serving as a deep work / creative / personal regeneration retreat centre.
 
-If you'd like to help to make this dream a reality, consider supporting my work via [Patreon](https://patreon.com/michalkorzonek){:target="_blank"} and/or reach out directly if you'd like to make a bigger investment (or use this [funky form](https://airtable.com/shrq3gXnx1lBggwi8){:target="_blank"})✨.
+If you'd like to help to make this dream a reality, have a look at this [project brief](https://docs.google.com/document/d/1Zbz3Ka5x7zVrJwBafn2mdW2oqRrdxNXoIMzwTkZiFIY/edit?usp=sharing){:target="_blank"}. You can also support me directly via [Patreon](https://patreon.com/michalkorzonek){:target="_blank"}  or michalroots.eth.
+
 
 ## Photos
 
