--- a/_posts/2022-09-13-gift.md
+++ b/_posts/2022-09-13-gift.md
@@ -12,10 +12,11 @@ Here are a few gifts I'd be delighted to receive.
 
 - An invitation to create IRL [containers for playful co-creation](https://michalkorzonek.com/experiences) (gatherings, playgrounds, burn-inspired festivals). I'll be delighted to be your wizard 🧙‍♂️
 - A sailboat and/or invitation for sailing voyages ⛵️
-- A compact mechanical keyboard with Bluetooth, UK layout
+- A mechanical keyboard (without numpad) with Bluetooth and UK layout
 - [REI Co-op Trail 40l black backpack](https://www.rei.com/product/168485/rei-co-op-trail-40-pack-mens){:target="_blank"}
 - [Travel Berkey Water Filter](https://berkey-waterfilters.fr/products/systeme-de-filtration-deau-travel-berkey-version-reduite-du-big-berkey){:target="_blank"}
 - $TDF Carrot Tokens 🥕🥕🥕
 - two LED pixel whips
+- [KOBO Libra 2 ebook reader](https://pt.kobobooks.com/products/kobo-libra-2){:target="_blank"}
 - a massage - I have two pain points in my feet that I'd love to release
 - financial redistribution - either as a one time donation or recurring contribution 
