--- a/_posts/2022-10-13-akinado.md
+++ b/_posts/2022-10-13-akinado.md
@@ -12,3 +12,6 @@ Akinado Nada Nissa is a Tarot-inspired game / journey - to be enjoyed solo, or i
 ![Akinado](/assets/akinado.jpg)
 
 *Akinado* is now in development stage. If you want to hear about it when it's ready to launch, I invite you to subscribe to my [Moonly Review](https://michalkorzonek.substack.com/){:target="_blank"}.
+
+-
+Co-created with [Jasmeen Hana](https://www.egyptian-templearts.com/){:target="_blank"} and [Silvia Bastos](https://silviamakesdrawings.com/){:target="_blank"} at the *Gathering of the Tribes 2022*.
