--- a/_posts/2022-05-17-cabin.md
+++ b/_posts/2022-05-17-cabin.md
@@ -38,6 +38,7 @@ After:
 
 ![Inside the Cabin](/assets/cabin-inside.jpeg)
 
+
 ## Technical Info
 Inside Area: 3x3m2<br>
 Approx build cost: €3500<br>
@@ -59,16 +60,20 @@ A wise man once said that it takes three houses to build a perfect one. While I 
 
 A few improvements I'd consider doing with the cabin design:
 
-- **Sand and varnish all the wood inside** - without it there's plenty of wood dust, which can't be too healthy to breathe.
+- ~~**Sand and varnish all the wood inside** - without it there's plenty of wood dust, which can't be too healthy to breathe.~~
 - **Invest in good doors** - the doors to the cabin are not very thick and in very heavy rainfall the water comes through.
 - **Opening windows at the top** - this would add an easy way to keep the air flowing in times when opening the front doors is not a viable option.
 - **Add a wood burning stove** - this is a bit tricky, since it's a tiny wooden house, but there must be a way to have a tiny wooden stove inside to heat the place up in winter without relying on electricity.
-- **Consider adding insulation** - I'm not 100% sure about this because it would take some precious space, but it might be worthwhile especially on cold days.
+- **Consider adding insulation** - I'm not 100% sure about this because it would take some precious space, but it might be worthwhile especially on cold days. It would be a big improvement to add insulation at the roof only.
 - **Soundproofing the roof** - when it rains it can get very loud inside. Insulation would do the trick.
 - **Instal a basic water system outside** - I have a bucket with the water collected from the roof, which works, but adding a tiny bit of sophistication would be great.
 - **Keep the food out** - it's not the cabin's fault per se (I just don't have a good food storage around), but I'd much rather not keep my eating station inside. 
 - **Add a trap door / hidden back door** - for fun, and to have a second exit.
 - **Cat flap** for Kiki to move freely in and out 🐈.
+
+Other reflections:
+
+- add 3m multiplug with 6 sockets, each with it's own switch
 
 ## Deep Work Retreat
 I'm on a quest to raise funds for a community land in Pico, with a forest, a community space and a few cabins serving as a deep work / creative / personal regeneration retreat centre.
