--- a/_posts/2022-05-17-cabin.md
+++ b/_posts/2022-05-17-cabin.md
@@ -116,3 +116,6 @@ My true form:
 ![Cabin Michal Builds stuff](/assets/cabin-michal-constructor.jpeg)
 
 [Twitter Thread 🐦](https://twitter.com/michalkorzonek/status/1526571912213692417?s=20&t=R8mX0mHjSk87t1B7KKWO_A){:target="_blank"}
+
+---
+It was a fun mini documentation article, wasn't it? You can find more 
